Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/6511613/clss41701.out
clss41701.java:21:30: compiler.err.type.var.may.not.be.followed.by.other.bounds
1 error
